Fix text overlap on small devices

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -21,8 +21,8 @@ font-weight: normal;
 src: local('Brandon Grotesque Black'), url('brandon-grotesque-black-58a8a3e824392.woff') format('woff');
 }
 
-html { 
-  overflow-y: scroll; 
+html {
+  overflow-y: scroll;
 }
 
 body {
@@ -42,7 +42,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6, p { padding: 0; margin: 0; font-weight: normal; }
-h1 { 
+h1 {
   text-transform: uppercase;
   font-size: 4em;
   line-height: 1.25;
@@ -75,15 +75,15 @@ iframe {
   background-repeat: no-repeat;
   background-position: center top;
 }
-  
-.overlay { 
+
+.overlay {
   height: 200px;
   background-color: #11799b;
   opacity: 0.70;
   text-align: center;
   box-shadow: 0px 5px 5px #404040;
 }
-  
+
 .logo {
   height: 100%;
 }
@@ -162,7 +162,7 @@ footer {
   max-height: 350px;
 }
 
-header { 
+header {
   display: block;
   margin-bottom: 30px;
   white-space: nowrap;
@@ -176,7 +176,7 @@ header {
   height: 120px;
 }
 
-nav { 
+nav {
   width: auto;
   text-align: right;
 }
@@ -223,12 +223,12 @@ nav li { padding-left: 5%; float: right; }
   box-shadow: 0px 10px 19px -9px #777;
 }
 
-.social-icons li { 
+.social-icons li {
   display: inline;
-  padding-right: 0.5em; 
+  padding-right: 0.5em;
 }
-.social-icons img { 
-  width: 30px; 
+.social-icons img {
+  width: 30px;
   transition: transform .3s ease-in-out;
 }
 .social-icons a:hover img {
@@ -271,8 +271,9 @@ nav li { padding-left: 5%; float: right; }
 }
 
 .hero {
-  display: flex; 
-  align-items: center; 
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   justify-content: center;
 }
 
@@ -334,6 +335,12 @@ nav li { padding-left: 5%; float: right; }
   .img-portrait {
     max-width: 90%;
     max-height: 90%;
+  }
+
+
+  .hero .item {
+    width: 100%;
+    padding-bottom: 30px;
   }
 }
 
